Code Refactoring.